deployment/shroff-data-test/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shroff-data-test
  labels:
    name: shroff-data-test
